modif index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header class="accueil">
-            <a href="index.html">
+            <a href="./index.html">
                 <h1 class="font__home"> Ohmyfood </h1>
             </a>
         </header>
