--- a/pages/mention-legale.html
+++ b/pages/mention-legale.html
@@ -8,6 +8,7 @@
         <title>Mentions légales </title>
     </head>
 
+<!-- HEADER --> 
     <body>
         <header class="accueil">
             <a href="../index.html"><h1 class="font__home"> Ohmyfood </h1></a>
@@ -16,9 +17,14 @@
         <main>
             <section class="intro">
                 <ul>
+
+
                     <li>
+
+<!-- TITRE -->  
                         <h2>Mentions légales</h2>
                         <p> En vigueur au 02/06/2020</p>
+<!-- PARTIE 1 --> 
                         <p> 
                             Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie
                             numérique, dite L.C.E.N., il est porté à la connaissance des Utilisateurs du site OHMYFOOD.com les présentes mentions légales.
@@ -28,6 +34,8 @@
                         </p>
                     </li>
                     <li>
+
+<!-- PARTIE 2 -->  
                         <h4>ARTICLE 1: L'EDITEUR</h4>
                         <p> 
                             L'édition du site OHMYFOOD.com est assurée par la Société SARL OHMYFOOD au capital de 10000 euros, immatriculée au RCS de
@@ -37,6 +45,8 @@
                             Le Directeur de la publication est John Cuistot.
                         </p>
                     </li>
+
+<!-- PARTIE 3 --> 
                     <li>
                         <h4>ARTICLE 2:L'HEBERGEUR</h4>
                         <p>
@@ -45,6 +55,8 @@
                         </p>
                     </li>
                     <li>
+
+<!-- PARTIE 4 --> 
                         <h4>ARTICLE 3: ACCES AU SITE</h4>
                         <p> 
                             Le site est accessible par tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant
@@ -53,6 +65,8 @@
                         </p>
                     </li>
                     <li>
+
+<!-- PARTIE 5 --> 
                         <h4>ARTICLE 4: COLLECTE DE DONNEES</h4>
                         <p>
                             Le site est exempté de déclaration à la Commission Nationale Informatique et Libertés (CNIL) dans la mesure où il ne collecte
@@ -60,6 +74,8 @@
                         </p>
                     </li>
                     <li>
+
+<!-- PARTIE 6 --> 
                         <h4>ARTICLE 5: COOKIES</h4>
                         <p> 
                             L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de
@@ -71,6 +87,8 @@
                         </p>
                     </li>
                     <li>
+
+<!-- PARTIE 7 --> 
                         <h4>ARTICLE 6: PROPRIETE INTELLECTUELLE</h4>
                         <p> 
                             Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du siteOHMYFOOD.com, sans
@@ -82,6 +100,8 @@
                 </ul>
             </section>
         </main>
+
+<!-- FOOTER --> 
         <footer>
             <a target="_blank" href ="./mention-legale.html" class="mention"> Mentions légales </a>   
             <a href="mailto:homyfood@gmail.com" class="contact"> Contactez-nous </a> 
